<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="post"
            type="com.example.photobook.data.Post" />
    </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_post_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_dimension"
                android:layout_marginTop="@dimen/small_dimension"
                android:layout_marginEnd="@dimen/small_dimension"
                android:autofillHints="Title"
                android:hint="@string/title"
                android:inputType="text"
                android:text="@={post.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_dimension"
                android:layout_marginTop="@dimen/medium_dimension"
                android:layout_marginEnd="@dimen/small_dimension"
                android:layout_marginBottom="@dimen/medium_dimension"
                android:autofillHints="body"
                android:hint="@string/body_description"
                android:inputType="textUri|textMultiLine"
                android:lines="@integer/min_line"
                android:maxLines="@integer/max_line"
                android:scrollbars="vertical"
                android:text="@={post.body}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />


            <TextView
                android:id="@+id/take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_dimension"
                android:layout_marginStart="@dimen/small_dimension"
                android:text="@string/take_a_picture"
                app:layout_constraintTop_toBottomOf="@id/body"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="take a picture"
                app:drawableLeftCompat="@android:drawable/ic_menu_camera" />
            <ImageView
                android:id="@+id/taken_image"
                android:layout_width="@dimen/img_dim"
                android:layout_height="@dimen/img_dim"
                android:layout_marginTop="@dimen/medium_dimension"
                android:layout_marginEnd="@dimen/small_dimension"
                android:contentDescription="@string/newly_added_image_description"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/taken_image1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/take_picture" />

            <Button
                android:id="@+id/delete_taken_image"
                android:layout_width="@dimen/large_dimension"
                android:layout_height="@dimen/large_dimension"
                android:hint="@string/delete_image_button_description"
                app:icon="@android:drawable/ic_delete"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/taken_image"
                app:layout_constraintTop_toTopOf="@id/taken_image" />
            <ImageView
                android:id="@+id/taken_image1"
                android:layout_width="@dimen/img_dim"
                android:layout_height="@dimen/img_dim"
                android:layout_marginEnd="@dimen/small_dimension"
                android:contentDescription="@string/newly_added_image_description"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/taken_image2"
                app:layout_constraintStart_toEndOf="@id/taken_image"
                app:layout_constraintTop_toTopOf="@+id/taken_image" />


            <Button
                android:id="@+id/delete_taken_image2"
                android:layout_width="@dimen/large_dimension"
                android:layout_height="@dimen/large_dimension"
                android:visibility="gone"
                tools:visibility="visible"
                android:hint="@string/delete_image_button_description"
                app:icon="@android:drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="@id/taken_image1"
                app:layout_constraintTop_toTopOf="@id/taken_image1" />

            <ImageView
                android:id="@+id/taken_image2"
                android:layout_width="@dimen/img_dim"
                android:layout_height="@dimen/img_dim"
                android:contentDescription="@string/newly_added_image_description"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/taken_image1"
                app:layout_constraintTop_toTopOf="@+id/taken_image1" />
            <Button
                android:id="@+id/delete_taken_image3"
                android:layout_width="@dimen/large_dimension"
                android:layout_height="@dimen/large_dimension"
                android:visibility="gone"
                tools:visibility="visible"
                android:hint="@string/delete_image_button_description"
                app:icon="@android:drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="@id/taken_image2"
                app:layout_constraintTop_toTopOf="@id/taken_image2" />
            <TextView
                android:id="@+id/taken_image2_text"
                android:layout_width="@dimen/img_dim"
                android:layout_height="@dimen/img_dim"
                android:textAlignment="center"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="yes oh"
                android:background="@color/primaryTransparent"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/taken_image1"
                app:layout_constraintTop_toTopOf="@+id/taken_image1" />
            <Button
                android:id="@+id/save_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_dimension"
                android:contentDescription="@string/save_post_button_description"
                android:text="@string/save_post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taken_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
