...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/retryImageDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_post_button"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_post_description"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
...
