...
    <string name="take_a_picture">Take a picture</string>
    <string name="take_a_video">Record a video</string>
    <string name="take_a_video_description">Click here if you want to record a video for your post</string>
    <string name="newly_added_image_description">Newly added image. Click on the cross to delete it if you want</string>
    <string name="save_post_button_description">Click here to save your post.</string>
    <string name="save_post">Save post</string>
    <string name="post_saving_success">Your post has been uploaded successfully</string>
    <string name="post_saving_error">An exception occurred while saving your post, check your internet connexion and try again</string>
    <string name="successfully_saved_image_message">photo saved on cloud but you can keep taking other</string>
    <string name="unsuccessfully_saved_image_message">Your latest taken image has not been successfully saved, please you may consider taking it again</string>
    <string name="unsuccessfully_saved_video_message">Your latest recorded video has not been successfully saved, please you may consider recording it again</string>
    <string name="take_image_and_video_explanation">If you want to share a video, please delete previously taken images</string>
    <string name="take_video_and_image_explanation">If you want to share a video, please delete previously taken images</string>
    <string name="successfully_saved_video_message">video saved on cloud but you can keep taking other</string>
    <string name="save_post_error_message">Please add a media or at least write a something to be able to post</string>
    <string name="camera_permission_denied_explanation">"You must enable camera permission to be able to use this functionality "</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="welcome_to_the_photo_book_app">Welcome to the Photo Book app</string>
    <string name="do_you_want_to_leave">Do you want discard your post and leave ?</string>
...
